# peram_gen

./: CMakeLists.txt  README
example_build_scripts/qbig_pascal/: do_cmake.sh
example_jobscript_generators/QBIG_pascal_D15/: check_runs.sh  slurm_create_runs.sh  slurm_start_runs.sh
example_jobscript_generators/QBIG_pascal_D15/templates/: quda.LapH.part1.in  quda.LapH.part3.in  quda.invert.input  quda.job.slurm.cmd
include/: distillery.h  input_parms.h
main/: Makefile  Makefile.ARPACKCG  Makefile.Bastian.exact_deflation  Makefile.RGMIXEDCG  Makefile.bastian  Makefile.jureca.QUDA  Makefile.juwels.QUDA  Makefile.qbig  Makefile.qbig.NOquda  main.cpp
main/Makefiles_do_not_use/: Makefile_old
modules/: distillery.cpp  distillery_serialIO.cpp  input_parms.cpp  ranlxd.cpp
